# Pink2

./: .gitignore  COPYING  Makefile.am  azure-pipelines.yml  configure.ac  pinkcoin-qt.pro
.azure/linux/: build-pinkcoin.yml  build-toolkit.yml  configure.diff  install-setup.yml  network-cofig.diff  network.diff
.azure/macos/: build-toolkit.yml
.azure/windows/: build-pinkcoin.yml  build-toolkit.yml  fix_prl.py  install-setup.yml
.azure/windows/patches/: fix_no_printer.patch  fix_qt_pkgconfig.patch  fix_rcc_determinism.patch  xkb-default.patch
.circleci/: config.yml
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  main.cpp  makefile.mingw  makefile.unix  ntp.cpp  rpcwallet.cpp  txdb-leveldb.cpp  wallet.cpp
src/qt/: aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoingui.h  coincontroldialog.cpp  coincontroltreewidget.cpp  editaddressdialog.cpp  guiutil.h  messagemodel.cpp  messagepage.cpp  optionsdialog.cpp  overviewpage.cpp  qvalidatedlineedit.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  sendmessagesdialog.cpp  sendmessagesentry.cpp  signverifymessagedialog.cpp  transactiondescdialog.cpp
src/qt/forms/: coincontroldialog.ui  messagepage.ui  optionsdialog.ui  rpcconsole.ui  sendcoinsentry.ui  sendmessagesdialog.ui  sendmessagesentry.ui  signverifymessagedialog.ui
